# babel-serializer

./: CMakeLists.txt  README.md
scripts/x64gen/: .gitignore  OpEntry.cs  Program.cs
src/babel-serializer/: callback.hh  deserialization_error.hh  errors.cc  errors.hh  file.cc  file.hh  net.hh  source_map.cc  source_map.hh
src/babel-serializer/assembly/: x64.cc  x64.gen.cc  x64.gen.hh  x64.hh
src/babel-serializer/compression/: lz4.cc  lz4.hh  snappy.cc  snappy.hh  zstd.cc  zstd.hh
src/babel-serializer/data/: byte_reader.hh  byte_writer.hh  csv.cc  csv.hh  escape.cc  escape.hh  json.cc  json.hh
src/babel-serializer/detail/: log.cc  log.hh  stb_image.hh  stb_image_write.hh  std_image.cc  std_image_write.cc
src/babel-serializer/experimental/: byte_reader.hh  byte_writer.hh
src/babel-serializer/geometry/: obj.cc  obj.hh  off.cc  off.hh  pcd.cc  pcd.hh  ply.cc  ply.hh  stl.cc  stl.hh
src/babel-serializer/image/: image.cc  image.hh
src/babel-serializer/network/: pcap.cc  pcap.hh
tests/: CMakeLists.txt  api.cc  file.cc  source_map.cc
tests/assembly/: x64-cursor-basics.cc
tests/compression/: snappy.cc  zstd.cc
tests/data/: csv.cc  json.cc
tests/geometry/: pcd.cc
